--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Experimenting with Node.js and OracleDB",
   "main": "index.js",
   "scripts": {
+    "prettier-format": "prettier --config .prettierrc --write .",
     "dev": "npm run build && docker-compose run app",
     "test": "npm run build && docker-compose run test",
     "clean": "rimraf dist/*",
@@ -34,6 +35,7 @@
     "@types/oracledb": "^5.2.3",
     "cpy-cli": "^4.1.0",
     "nodemon": "^2.0.16",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
