--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "declaration": true,
+    "declaration": true
   },
   "include": ["src/**/*", "test/*"]
 }
