--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   test:
     build: docker/base
     working_dir: /users/root/app/dist
-    command: npx nodemon -L ts-node test
+    command: npx nyc --reporter text-summary ts-node test
     environment:
       - NODE_ORACLEDB_USER=system
       - NODE_ORACLEDB_PASSWORD=password
