--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/cressie176/node-oracledb-experiment#readme",
   "dependencies": {
-    "@types/node": "^17.0.42",
     "marv": "^5.0.0",
     "marv-oracledb-driver": "^1.0.1",
     "oracledb": "^5.4.0",
@@ -32,9 +31,11 @@
   },
   "devDependencies": {
     "@types/marv": "^5.0.0",
+    "@types/node": "^17.0.42",
     "@types/oracledb": "^5.2.3",
     "cpy-cli": "^4.1.0",
     "nodemon": "^2.0.16",
+    "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.1",
