--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run clean && tsc",
     "postbuild": "npm run copysrc && npm run copytest",
     "copysrc": "cpy --no-overwrite 'src/**/*' '!**/*.ts' '!**/*.tsx' '!**/_test_/*.tsx' dist/src",
-    "copytest": "cpy --no-overwrite 'test/**/*' '!**/*.ts' '!**/*.tsx' '!**/_test_/*.tsx' dist/test"
+    "copytest": "cpy --no-overwrite 'test/**/*' '!**/*.ts' '!**/*.tsx' '!**/_test_/*.tsx' dist/test",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@types/node": "^17.0.42",
     "@types/oracledb": "^5.2.3",
     "cpy-cli": "^4.1.0",
+    "husky": "^8.0.1",
     "nodemon": "^2.0.16",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
