Run tests on commit

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prettier-format": "prettier --config .prettierrc --write .",
-    "dev": "npm run build && docker-compose run app",
-    "test": "npm run build && docker-compose run test",
+    "dev": "npm run build && docker-compose run --no-TTY app",
+    "test": "npm run build && docker-compose run --no-TTY test",
     "clean": "rimraf dist/*",
     "build": "npm run clean && tsc",
     "postbuild": "npm run copysrc && npm run copytest",
