--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prettier-format": "prettier --config .prettierrc --write .",
-    "dev": "npm run build && docker-compose run --no-TTY app",
+    "dev": "npm run build && docker-compose run --service-ports --no-TTY app",
     "test": "npm run build && docker-compose run --no-TTY test",
     "clean": "rimraf dist/*",
     "build": "npm run clean && tsc",
@@ -25,15 +25,21 @@
   },
   "homepage": "https://github.com/cressie176/node-oracledb-experiment#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "marv": "^5.0.0",
     "marv-oracledb-driver": "^1.0.1",
     "oracledb": "^5.4.0",
     "tripitaka": "^3.0.2"
   },
   "devDependencies": {
+    "@types/bent": "^7.3.2",
+    "@types/express": "^4.17.13",
     "@types/marv": "^5.0.0",
     "@types/node": "^17.0.42",
     "@types/oracledb": "^5.2.3",
+    "bent": "^7.3.12",
     "cpy-cli": "^4.1.0",
     "husky": "^8.0.1",
     "nodemon": "^2.0.16",
