--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodemon": "^2.0.16",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
