--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Experimenting with Node.js and OracleDB",
   "main": "dist/src/index.js",
   "scripts": {
-    "dev": "npm run build && docker-compose run --service-ports --no-TTY app",
-    "dev:watch": "npm run build && docker-compose run --service-ports --no-TTY app npx nodemon --delay 2000ms --watch '**/*' --ext '*' --exec ts-node src/index.js",
-    "test": "npm run build && docker-compose run --service-ports --no-TTY test",
-    "test:watch": "npm run build && docker-compose run --service-ports --no-TTY app npx nodemon --delay 2000ms --watch '**/*' --ext '*' --exec nyc --reporter text-summary ts-node test/index.js",
+    "dev": "npm run build && docker-compose run --service-ports app",
+    "dev:watch": "npm run build && docker-compose run --service-ports app npx nodemon --delay 2000ms --watch '**/*' --ext '*' --exec ts-node src/index.js",
+    "test": "npm run build && docker-compose run --no-TTY test",
+    "test:watch": "npm run build && docker-compose run app npx nodemon --delay 2000ms --watch '**/*' --ext '*' --exec nyc --reporter text-summary ts-node test/index.js",
+    "test:github": "npm run build && docker-compose run test",
     "clean": "rimraf dist/*",
     "build": "npm run clean && tsc",
     "build:watch": "nodemon --watch 'src/**' --watch 'test/**' --watch 'package.json' --ext '*' --exec npm run build",
