--- a/.github/workflows/node-js-ci.yml
+++ b/.github/workflows/node-js-ci.yml
@@ -12,4 +12,4 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npx prettier --check .
-      - run: npm run github
+      - run: npm run test:github
