--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,14 +11,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16
       - run: npm ci
       - run: npx prettier --check .
       - run: npm run test:github
       - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-base --file ./docker/base/Dockerfile .
       - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app:$(date +%s) --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app:latest --file ./docker/app/Dockerfile .
+      - run: docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASSWORD}}
+      - run: docker push ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      - run: docker push ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app
