--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,9 +16,9 @@ jobs:
       - run: npx prettier --check .
       - run: npm run test:github
       - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-base --file ./docker/base/Dockerfile .
-      - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app:$(date +%s) --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app:latest --file ./docker/app/Dockerfile .
+      - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-service:$(date +%s) --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-service:latest --file ./docker/service/Dockerfile .
       - run: docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASSWORD}}
-      - run: docker push ${{secrets.DOCKER_USER}}/node-oracledb-experiment-app
+      - run: docker push --all-tags ${{secrets.DOCKER_USER}}/node-oracledb-experiment-service
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
