--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,11 @@ services:
     command: npx ts-node src/index.js
     environment:
       NODE_ENV: production
-      NODE_ORACLEDB_ERROR_ON_CONCURRENT_EXECUTE: true
+      NODE_ORACLEDB_ERROR_ON_CONCURRENT_EXECUTE: 'TRUE'
       NODE_ORACLEDB_USER: app_user
       NODE_ORACLEDB_PASSWORD: app_password
       NODE_ORACLEDB_CONNECTION_STRING: oracledb-app:1521/XEPDB1
-      DATABASE_MIGRATE: true
+      DATABASE_MIGRATE: 'TRUE'
       LOGGING_LEVEL: DEBUG
     volumes:
       - ./:/home/node/node-oracledb-experiment
@@ -47,11 +47,11 @@ services:
     command: npx ts-node test/index.js
     environment:
       NODE_ENV: test
-      NODE_ORACLEDB_ERROR_ON_CONCURRENT_EXECUTE: true
+      NODE_ORACLEDB_ERROR_ON_CONCURRENT_EXECUTE: 'TRUE'
       NODE_ORACLEDB_USER: test_user
       NODE_ORACLEDB_PASSWORD: test_password
       NODE_ORACLEDB_CONNECTION_STRING: oracledb-test:1521/XEPDB1
-      DATABASE_MIGRATE: true
+      DATABASE_MIGRATE: 'TRUE'
     volumes:
       - ./:/home/node/node-oracledb-experiment
     depends_on:
