--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,12 +12,12 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - run: npm ci --omit dev --ignore-scripts
+      - run: npm ci --ignore-scripts
       - run: npx prettier --check .
       - run: npm run test:github
       - run: docker build --target builder --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-test .
       - run: docker network create test
-      - run: docker run -d --network test --name oracledb-test -e ORACLE_PASSWORD=password -e APP_USER=app_user -e APP_USER_PASSWORD=app_password gvenzl/oracle-xe
+      - run: docker run -d --network test --name oracledb-test -e ORACLE_PASSWORD=password -e APP_USER=app_user -e APP_USER_PASSWORD=app_password gvenzl/oracle-xe:21.3.0
       - run: docker run -it ---network test e NODE_ENV=test -e NODE_ORACLEDB_ERROR_ON_CONCURRENT_EXECUTE=true -e NODE_ORACLEDB_USER=test_user -e NODE_ORACLEDB_PASSWORD=test_password -e NODE_ORACLEDB_CONNECTION_STRING=oracledb-test:1521/XEPDB1 -e DATABASE_MIGRATE=true ${{secrets.DOCKER_USER}}/node-oracledb-experiment-test
       - run: docker build --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-service:${{github.event.release.tag_name}} --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-service:latest .
       - run: docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASSWORD}}
