--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - run: npm install --only=dev --ignore-scripts
+      - run: npm clean-install --only=dev --ignore-scripts
       - run: npx prettier --check .
       - run: npm run test:github
       - run: docker build --target builder --tag ${{secrets.DOCKER_USER}}/node-oracledb-experiment-test .
